# argus

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_scrutiny_and_surface_mode.py  0003_llm_usage.py  0004_anchor_registry.py  0005_alias_crosswalk.py  0006_cw_survive.py
app/: __init__.py  config.py  db.py  main.py  models.py
app/services/: __init__.py  anchor_registry.py  flow_query.py  llm_usage.py  scrutiny.py
app/services/graph/: __init__.py  base.py  neo4j_projection.py  pgvector_store.py
app/services/ingest/: __init__.py  backfill_event_concept_types.py  backfill_isolated_cooc.py  congress_roster.py  congress_votes.py  entity_tags_resolver.py  fec.py  link_committees_to_candidates.py  merge_pass.py  news_cooccurrence.py  project_to_neo4j.py  run_scrutiny.py  scheduled_sweep.py  sec_edgar.py  seed_alias_crosswalk.py  seed_anchor_registry.py  seed_p16_affiliations.py  seed_person_merges.py  senate_lda.py  usaspending.py
app/static/: index.html
k8s/base/: api.yaml  namespace.yaml  neo4j.yaml  postgres.yaml  scheduled-sweep.yaml  tunnel.yaml
tests/: test_anchor_registry.py  test_congress_roster.py  test_congress_votes.py  test_detention_industry_anchors.py  test_fec_individual_contributor.py  test_llm_usage.py  test_merge_pass.py  test_model2.py  test_p5_flow.py  test_pac_org_affiliation.py  test_registry_ingest_dispatch.py  test_registry_seed.py  test_resolve.py  test_scheduled_sweep.py  test_scrutiny.py  test_search.py  test_sec_edgar.py  test_senate_lda.py  test_smoke.py
